[gd_scene load_steps=8 format=2]

[ext_resource path="res://environment/Pipe.tscn" type="PackedScene" id=1]
[ext_resource path="res://environment/Obstacle.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/point.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/coin.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 46 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Coin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "coun"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Coin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Obstacle" type="Node2D" groups=["obstacles"]]
position = Vector2( 0, 427 )
script = ExtResource( 2 )

[node name="Pipe" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 75 )

[node name="Pipe2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -75 )
rotation = 3.14159

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( -29, 3 )
shape = SubResource( 1 )

[node name="Coin" type="Sprite" parent="ScoreArea"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )
hframes = 6

[node name="AnimationCoin" type="AnimationPlayer" parent="ScoreArea"]
autoplay = "coun"
anims/RESET = SubResource( 2 )
anims/coun = SubResource( 3 )

[node name="Point" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Pipe" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="Pipe2" to="." method="_on_Pipe_body_entered"]
[connection signal="body_exited" from="ScoreArea" to="." method="_on_ScoreArea_body_exited"]
